--- a/config.yaml
+++ b/config.yaml
@@ -9,11 +9,12 @@ general_goal_sampling: false                 # True: For all tasks in mode goal 
 step_size: 0.25                              # Max allowable distance that newly generated node can be from the nearest node in the tree 
 cost_function: 2                            # 1: Sum(Euclidean norm per agent), 2: Worst(Euclidean norm per agent per edge)                       
 ptc_threshold: 0.1                          # Converge Threshold
-ptc_max_iter: 4000                          # Max iteration with no change before stopping
+ptc_max_iter: 3000                          # Max iteration with no change before stopping
 mode_probability: None                       # Probability to choose new mode (0: unfiormly, 1: greedy None: equally, else: manually set) 
 informed_sampling: true                     # True: Informed sampling is applied 
-informed_sampling_version: None             # If 'informed_sampling: true', the specified version is applied (0: Only regarding agent, 1: Including other agents)
+informed_sampling_version: 0                # If 'informed_sampling: true', the specified version is applied (0: Only regarding agent, 1: Including other agents)
 cprofiler: True                            # Use cprofiler to run the 
+cost: euclidean                             #Type of cost function: euclidean (Euclidean norm), euclidean_max
 
 
 
